Socials link spacing fix

--- a/stylesheet/thechrislea.css
+++ b/stylesheet/thechrislea.css
@@ -72,6 +72,10 @@ h3 {
 	padding-bottom: 20px;
 }
 
+.SocialLogo:hover {
+	background-color: none;
+}
+
 /*
 .SocialLogo>img {
 	width: 400px;
@@ -81,7 +85,6 @@ h3 {
 	margin-left: 1%;
 	margin-right: 1%;
 } */
-
 
 p {
 	font-weight: 800;
@@ -130,7 +133,9 @@ p {
 
 #Socials {
 	margin-top: 12vh;
-	width: 100%;
+	width: 60%;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
 
@@ -145,31 +150,37 @@ p {
 
 
 .SocialLinks {
-	width: 48%;
+	width: 45%;
 	display: inline-block;
-	min-width: 400px;
-	max-width: 800px;
+	min-width: 200px;
 }
 
 
 .SocialLogo {
-	float: left;
+	float: right;
 	width: 100%;
 	max-width: 400px;
 }
 
-/*
-.SocialPad {
-}
 
 .SocialText {
 	width: 100%;
 	height: 5vh;
 	line-height: 5vh;
 	text-align: center;
-	font-size: 2vw;
+	font-size: calc(12px + 1.5vw);
 	display: inline-block;
 	float: right;
 }
 
-*/
+
+
+
+@media only screen and (max-width: 750px) {
+	.SocialLinks {
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+	
+}
